--- a/.github/workflows/build_upload.yml
+++ b/.github/workflows/build_upload.yml
@@ -53,7 +53,7 @@ jobs:
         echo '---start make---'
         ### make ${{github.event.inputs.board}}_defconfig
         make ${{github.event.inputs.custom-config}}
-        make -j$(nproc)
+        make -j$(nproc) 2>&1 | tee build-log.txt
         ### cp -r /opt/buildroot/output/images /opt/firmware
 
     - name : Upload buildroot-${{github.event.inputs.branches-tags}}-${{github.event.inputs.board}}
