--- a/.github/workflows/build_upload.yml
+++ b/.github/workflows/build_upload.yml
@@ -22,7 +22,7 @@ on:
       build-with:
         description: 'build-with'
         required: false
-        default: ''
+        default: '--silent'
 
 
 jobs:
@@ -53,7 +53,9 @@ jobs:
         echo '---start make---'
         ### make ${{github.event.inputs.board}}_defconfig
         make ${{github.event.inputs.custom-config}}
-        make -s -j$(nproc) 2>&1 | tee build-log.txt
+
+        echo '--- make ${{github.event.inputs.build-with}} -j$(nproc) 2>&1 | tee build-log.txt ---'
+        make ${{github.event.inputs.build-with}} -j$(nproc) 2>&1 | tee build-log.txt
         ### cp -r /opt/buildroot/output/images /opt/firmware
 
     - name : Upload buildroot-${{github.event.inputs.branches-tags}}-${{github.event.inputs.board}}
