--- a/.github/workflows/build_upload.yml
+++ b/.github/workflows/build_upload.yml
@@ -32,6 +32,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Clone source code
       run: |
+        echo "--- nproc=$(nproc) ---"
         git clone ${{github.event.inputs.git-address}} /opt/buildroot
         cd /opt/buildroot
 
