--- a/.github/workflows/build_upload.yml
+++ b/.github/workflows/build_upload.yml
@@ -32,9 +32,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: Clone source code
       run: |
-        echo "--- nproc=$(nproc) ---"
-        echo "--- mem=`free -h` ---"
-        echo "--- disk=`df -h` ---"
+        echo "--- cpu info ---"
+        `cat /proc/cpuinfo`
+        echo "--- mem info ---"
+        `free -h`
+        echo "--- disk info ---"
+        `df -h`
         git clone ${{github.event.inputs.git-address}} /opt/buildroot
         cd /opt/buildroot
 
