--- a/.github/workflows/build_upload.yml
+++ b/.github/workflows/build_upload.yml
@@ -32,12 +32,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: Clone source code
       run: |        
-        echo "--- mem info ---\n `free -h`"
-        
-        echo "--- cpu info ---"
-        `cat /proc/cpuinfo`
-        echo "--- disk info ---"
-        `df -h`
+        echo "--- target info ---\n"
+        echo "`free -h`"
+        echo "`cat /proc/cpuinfo`"
+        echo "`df -h`"
+        # clone repo
         git clone ${{github.event.inputs.git-address}} /opt/buildroot
         cd /opt/buildroot
 
