--- a/.github/workflows/buildroot.yml
+++ b/.github/workflows/buildroot.yml
@@ -36,9 +36,9 @@ jobs:
 
     - name: Install packages
       run: |
-        sudo apt-get update
-        sudo apt-get upgrade
-        sudo apt-get install -y make gcc g++ unzip git bc python device-tree-compiler mtd-utils curl
+        #sudo apt-get update
+        #sudo apt-get upgrade
+        #sudo apt-get install -y make gcc g++ unzip git bc python device-tree-compiler mtd-utils curl
         # Install repo tool and add to $PATH
         mkdir $GITHUB_WORKSPACE/bin
         curl https://storage.googleapis.com/git-repo-downloads/repo > $GITHUB_WORKSPACE/bin/repo
