--- a/.github/workflows/buildroot_sdk-CI.yml
+++ b/.github/workflows/buildroot_sdk-CI.yml
@@ -59,7 +59,7 @@ jobs:
         #cd /opt/buildroot
         mkdir -p /opt/buildroot_sdk
         cd /opt/buildroot_sdk
-        repo init -u ${{github.event.inputs.manifest-url}} -m ${{github.event.inputs.manifest-url}}
+        repo init -u ${{github.event.inputs.manifest-url}} -m ${{github.event.inputs.manifest-file}}
         repo sync
       
     - name: Bulid buildroot_sdk
