--- a/.github/workflows/buildroot_sdk-CI.yml
+++ b/.github/workflows/buildroot_sdk-CI.yml
@@ -10,6 +10,10 @@ on:
         description: 'manifest-url'
         required: true
         default: 'https://github.com/pingwuu/buildroot_sdk-manifest.git'
+      manifest-branches-tags:
+        description: 'manifest-branches-tags'
+        required: true
+        default: 'main'
       manifest-file:
         description: 'manifest-file'
         required: true
@@ -59,7 +63,7 @@ jobs:
         #cd /opt/buildroot
         mkdir -p /opt/buildroot_sdk
         cd /opt/buildroot_sdk
-        repo init -u ${{github.event.inputs.manifest-url}} -m ${{github.event.inputs.manifest-file}}
+        repo init -u ${{github.event.inputs.manifest-url}} -b ${{github.event.inputs.manifest-branches-tags}} -m ${{github.event.inputs.manifest-file}}
         repo sync
       
     - name: Bulid buildroot_sdk
