--- a/.github/workflows/buildroot_sdk-ci_orangepi-pc-plus.yml
+++ b/.github/workflows/buildroot_sdk-ci_orangepi-pc-plus.yml
@@ -72,8 +72,8 @@ jobs:
         cd /opt/buildroot_sdk
         #repo init -u ${{github.event.inputs.manifest-url}} -b ${{github.event.inputs.manifest-branches-tags}} -m ${{github.event.inputs.manifest-file}}
 
-        echo "--- repo init -u $MANIFEST_URL -b $MANIFEST_BRANCHES -m $MANIFEST_FILE ---"
-        repo init -u $MANIFEST_URL -b $MANIFEST_BRANCHES -m $MANIFEST_FILE
+        echo "--- repo init -u ${MANIFEST_URL} -b ${MANIFEST_BRANCHES} -m ${MANIFEST_FILE} ---"
+        repo init -u ${MANIFEST_URL} -b ${MANIFEST_BRANCHES} -m ${MANIFEST_FILE}
         repo sync
       
     - name: Bulid buildroot_sdk
