--- a/.github/workflows/buildroot_sdk-ci_orangepi-pc-plus.yml
+++ b/.github/workflows/buildroot_sdk-ci_orangepi-pc-plus.yml
@@ -35,7 +35,7 @@ on:
 
 env:
   MANIFEST_URL: https://github.com/pingwuu/buildroot_sdk-manifest.git
-  MANIFEST_BRANCHES-TAGS: main
+  MANIFEST_BRANCHES_TAGS: main
   MANIFEST_FILE: 2023.11.x.xml
   BUILD_SCRIPT: build_orangepi-pc-plus.sh
   BOARD: orangepi-pc-plus
@@ -72,18 +72,18 @@ jobs:
         cd /opt/buildroot_sdk
         #repo init -u ${{github.event.inputs.manifest-url}} -b ${{github.event.inputs.manifest-branches-tags}} -m ${{github.event.inputs.manifest-file}}
 
-        echo "--- repo init -u ${MANIFEST_URL} -b ${MANIFEST_BRANCHES} -m ${MANIFEST_FILE} ---"
-        repo init -u ${MANIFEST_URL} -b ${MANIFEST_BRANCHES} -m ${MANIFEST_FILE}
+        echo "--- repo init -u ${MANIFEST_URL} -b ${MANIFEST_BRANCHES_TAGS} -m ${MANIFEST_FILE} ---"
+        repo init -u ${MANIFEST_URL} -b ${MANIFEST_BRANCHES_TAGS} -m ${MANIFEST_FILE}
         repo sync
       
     - name: Bulid buildroot_sdk
       run: |
         cd /opt/buildroot_sdk
         echo '---start build with : $BUILD_SCRIPT---'
-        bash $BUILD_SCRIPT
+        bash ${BUILD_SCRIPT}
 
     - name : Upload buildroot_sdk-$BOARD output/images
       uses: actions/upload-artifact@master
       with:
-        name: buildroot_sdk-$BOARD
-        path: /opt/buildroot_sdk/output_$BOARD/images
+        name: buildroot_sdk-${BOARD}
+        path: /opt/buildroot_sdk/output_${BOARD}/images
